--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.1",
