--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
